--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BitLift</string>
+    <string name="exercise_tab">Exercises</string>
+    <string name="stats_tab">Statistics</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
